[tool.poetry]
name = "bqemulatormanager"
version = "0.1.9"
description = ""
authors = ["gyuta <kuroshiba0408@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-bigquery = {extras = ["pandas"], version = "^3.4.1"}
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
yapf = "*"
isort = "*"
toml = "*"

[tool.yapf]
based_on_style = "pep8"
column_limit = 160

[tool.isort]
line_length = 160

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
