[tool.poetry]
name = "bqemulatormanager"
version = "0.1.8"
description = ""
authors = ["gyuta <kuroshiba0408@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pyyaml = "*"
google-cloud-bigquery = "^3.0.0"
db-dtypes = "^1.0.0"
psutil = "^5.0.0"
google-auth = "^2.17.2"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "*"
tox = "*"
coverage = "*"
isort = "*"
black = "*"
mypy = "*"
pandas-stubs = "*"

[tool.flake8]
per-file-ignores = """
  __init__.py: F401
"""
max-line-length = 160
exclude = "venv/*,tox/*"

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311']
line-length = 160

[tool.isort]
line_length = 160

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
